# fcos-ignition-coder

./: .gitignore  Cargo.toml  README.md  ignition-coder.nu  pixi.toml
.github/workflows/: release.yml
doc/: release-assets.md  release.adoc
examples/: EXAMPLES.md  bootstrap.ign  bootstrap1.ign  bootstrap2.ign  example.ign
scripts/: bump-version.nu  bump-version.sh  create-wix-placeholders.sh  preview-release-assets.nu  release.nu
src/: main.rs  tests.rs  tests_dyn.rs
wix/: License.rtf  main.wxs
