[package]
name = "fcos-ignition-coder"
version = "0.2.0"
edition = "2021"
description = "Decode and encode Fedora CoreOS Ignition configuration files"

[dependencies]
ignition-config = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
data-url = "0.1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.14"
